FrogWeatherApiService.kt created. With that the app can now make api requests to get the forecast. Created data classes for Json objects. Implemented location permission request. The app now updates the location at startup if the last location is older than 30 minutes (when saving a new location the time difference between the old and the new location is checked in the SettingsViewModel.kt).

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.example.frogweather">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+
     <application
         android:name=".ui.FrogWeatherApplication"
         android:allowBackup="true"
