--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,6 +22,14 @@ android {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+
+            buildConfigField("String", "API_KEY", "\"721661b090391eed20fcca7c71da55ae\"")
+            resValue("string", "api_key", "721661b090391eed20fcca7c71da55ae")
+        }
+
+        debug {
+            buildConfigField("String", "API_KEY", "\"721661b090391eed20fcca7c71da55ae\"")
+            resValue("string", "api_key", "721661b090391eed20fcca7c71da55ae")
         }
     }
     compileOptions {
