--- a/app/build.gradle
+++ b/app/build.gradle
@@ -70,4 +70,10 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-moshi:2.9.0'
     implementation 'com.google.android.gms:play-services-location:20.0.0'
     implementation 'com.jakewharton.threetenabp:threetenabp:1.4.0'
+    debugImplementation 'com.facebook.flipper:flipper:0.170.0'
+    debugImplementation 'com.facebook.soloader:soloader:0.10.4'
+    releaseImplementation 'com.facebook.flipper:flipper-noop:0.170.0'
+    implementation "androidx.room:room-runtime:2.4.3"
+    kapt "androidx.room:room-compiler:2.4.3"
+    implementation "androidx.room:room-ktx:2.4.3"
 }
